# servant-routes

./: .gitignore  .headroom.yaml  .hlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  cabal.project  default.nix  fourmolu.yaml  servant-routes.cabal  servant-routes.nix  shell.nix
.github/workflows/: haskell-ci.yml  haskell.yml
headroom-templates/: haskell.mustache
nix/: nixpkgs.nix  packages.nix  pre-commit.nix  sources.json  utils.nix
servant-routes/: CHANGELOG.md  README.md  servant-routes.cabal
servant-routes-golden/: CHANGELOG.md  LICENSE  README.md  servant-routes-golden.cabal
servant-routes-golden/.golden/Servant.API.Routes.GoldenSpec.API/: golden
servant-routes-golden/.golden/Servant.API.Routes.GoldenSpec.MultiAPI/: golden
servant-routes-golden/.golden/Servant.API.Routes.GoldenSpec.SubAPI/: actual  golden
servant-routes-golden/.golden/Servant.API.Routes.GoldenSpec.SubAPI2/: actual  golden
servant-routes-golden/.golden/Servant.API.Routes.GoldenSpec.SubAPI3/: actual  golden
servant-routes-golden/src/Servant/API/Routes/: Golden.hs
servant-routes-golden/test/Servant/API/Routes/: GoldenSpec.hs
servant-routes/src/Servant/API/: Routes.hs
servant-routes/src/Servant/API/Routes/: Header.hs  Path.hs  Response.hs  Route.hs  Utils.hs
servant-routes/src/Servant/API/Routes/Internal/: Auth.hs  Description.hs  Header.hs  Param.hs  Request.hs  Response.hs  Route.hs  Some.hs
servant-routes/test/Servant/API/: RoutesSpec.hs
servant-routes/test/Servant/API/Routes/: HeaderSpec.hs  ParamSpec.hs  PathSpec.hs  RequestSpec.hs  ResponseSpec.hs  RouteSpec.hs  SomeSpec.hs  Util.hs
src/Servant/API/: Routes.hs
src/Servant/API/Routes/: Auth.hs  Body.hs  Header.hs  Param.hs  Path.hs  Request.hs  Response.hs  Route.hs  Utils.hs
src/Servant/API/Routes/Internal/: Auth.hs  Body.hs  Header.hs  Param.hs  Path.hs  Request.hs  Response.hs  Route.hs  Some.hs
test/Servant/API/: RoutesSpec.hs
test/Servant/API/Routes/: BodySpec.hs  HeaderSpec.hs  ParamSpec.hs  PathSpec.hs  RequestSpec.hs  ResponseSpec.hs  RouteSpec.hs  SomeSpec.hs  Util.hs
