cabal-version:      3.0
name:               servant-routes
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Frederick Pringle
maintainer:         freddyjepringle@gmail.com
copyright:          Copyright(c) Frederick Pringle 2024
homepage:           https://github.com/fpringle/servant-routes
bug-reports:        https://github.com/fpringle/servant-routes/issues
category:           Servant, Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

source-repository head
  type:           git
  location:       https://github.com/fpringle/servant-routes

common warnings
  ghc-options: -Wall -Wno-unused-do-bind

common deps
  build-depends:
    , base >= 4
    , servant
    , aeson
    , text
    , http-types
    , containers
    , microlens
    , microlens-th

common extensions
  default-extensions:
    DeriveGeneric
    DerivingVia 
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    ViewPatterns
    DataKinds
    AllowAmbiguousTypes
    TypeFamilies
    TypeOperators

library
  import:
      warnings
    , deps
    , extensions
  exposed-modules:
    Servant.API.Routes
    Servant.API.Routes.Header
    Servant.API.Routes.Param
    Servant.API.Routes.Path
  other-modules:
    Servant.API.Routes.Utils
  -- other-extensions:
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite servant-routes-test
  import:
      warnings
    , deps
    , extensions
  default-language: Haskell2010
  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-tool-depends:
      hspec-discover:hspec-discover
  ghc-options:      -Wno-orphans
  build-depends:
    , servant-routes
    , QuickCheck
    , hspec
