cabal-version:      3.0
name:               servant-routes
version:            0.1.0.0
synopsis:           Generate route descriptions from Servant APIs
description:
    See the documentation of 'Servant.API.Routes'.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Frederick Pringle
maintainer:         freddyjepringle@gmail.com
copyright:          Copyright(c) Frederick Pringle 2025
homepage:           https://github.com/fpringle/servant-routes
bug-reports:        https://github.com/fpringle/servant-routes/issues
category:           Servant, Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md

tested-with:
    GHC == 8.8.4
  , GHC == 8.10.7
  , GHC == 9.0.2
  , GHC == 9.2.4
  , GHC == 9.2.8
  , GHC == 9.4.2
  , GHC == 9.4.5
  , GHC == 9.6.1
  , GHC == 9.6.7
  , GHC == 9.8.2
  , GHC == 9.10.2
  , GHC == 9.12.2

source-repository head
  type:           git
  location:       https://github.com/fpringle/servant-routes

common warnings
  ghc-options: -Wall -Wno-unused-do-bind

common deps
  build-depends:
    , base >= 4.13 && < 5
    , servant >= 0.17 && < 0.21
    , aeson >= 2.0 && < 2.3
    , text >= 1.2 && < 2.2
    , http-types >= 0.12 && < 0.13
    , containers >= 0.6 && < 0.8
    , microlens >= 0.4.9 && < 0.5
    , microlens-th >= 0.4.3 && < 0.5
    , aeson-pretty >= 0.8.8 && < 0.9

common extensions
  default-extensions:
    DeriveGeneric
    DerivingVia 
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    ViewPatterns
    DataKinds
    AllowAmbiguousTypes
    TypeFamilies
    TypeOperators

library
  import:
      warnings
    , deps
    , extensions
  ghc-options: -Wunused-packages
  exposed-modules:
    Servant.API.Routes
    Servant.API.Routes.Route
    Servant.API.Routes.Header
    Servant.API.Routes.Param
    Servant.API.Routes.Path
    Servant.API.Routes.Request
    Servant.API.Routes.Response
    Servant.API.Routes.Auth

    Servant.API.Routes.Internal.Some
    Servant.API.Routes.Internal.Header
    Servant.API.Routes.Internal.Param
    Servant.API.Routes.Internal.Path
    Servant.API.Routes.Internal.Request
    Servant.API.Routes.Internal.Response
    Servant.API.Routes.Internal.Route
    Servant.API.Routes.Internal.Auth
  other-modules:
    Servant.API.Routes.Utils
  -- other-extensions:
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite servant-routes-test
  import:
      warnings
    , deps
    , extensions
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:
    Servant.API.RoutesSpec
    Servant.API.Routes.Util
    Servant.API.Routes.RouteSpec
    Servant.API.Routes.HeaderSpec
    Servant.API.Routes.ParamSpec
    Servant.API.Routes.PathSpec
    Servant.API.Routes.RequestSpec
    Servant.API.Routes.ResponseSpec
    Servant.API.Routes.SomeSpec
  build-tool-depends:
      hspec-discover:hspec-discover
  ghc-options:      -Wno-orphans
  build-depends:
    , servant-routes
    , hspec >= 2.9 && < 2.12
    , QuickCheck >= 2.14 && < 2.15
